--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,92 @@ header {
 .new-header {
   display: none;
 }
-@media only screen and (max-width: 431px) {
+.map-section {
+  position: relative;
+}
+.map-tile {
+  width: 100%;
+  height: 100px;
+  background-color: var(--darknavy);
+}
+.map-tile p {
+  color: #f1f1f1;
+  text-align: center;
+  font-size: 30px;
+  padding-top: 15px;
+  font-weight: 700;
+}
+.map-section .map-zone {
+  width: 100%;
+  height: 400px;
+}
+.contact-section {
+  padding-top: 100px;
+  padding-bottom: 30px;
+}
+
+.about-section {
+  padding-top: 100px;
+  height: 40rem;
+}
+.feature-bg:after {
+  background-image: url(https://themewagon.github.io/fruitkha/assets/img/feature-bg.jpg);
+  position: absolute;
+  right: 0;
+  top: 235px;
+  width: 40%;
+  height: 40%;
+  content: "";
+  background-size: cover;
+  background-position: center;
+  border-top-left-radius: 5px;
+  -webkit-box-shadow: 0 0 20px #cacaca;
+  box-shadow: 0 0 20px #cacaca;
+  border-bottom-left-radius: 5px;
+}
+.about-container {
+  padding-top: 50px;
+}
+.about-col {
+  padding-top: 30px;
+}
+.content-about {
+  margin-left: 20px;
+}
+.list-box .list-icon li {
+  display: block;
+  font-size: 24px;
+  margin-right: 15px;
+  color: #f28123;
+  width: 65px;
+  height: 65px;
+  text-align: center;
+  line-height: 60px;
+  border: 2px #f28123 dotted;
+  border-radius: 999px;
+}
+.list-box {
+  overflow: hidden;
+  letter-spacing: 0.5px;
+}
+.list-icon {
+  font-size: 50px;
+  border: 2px dotted var(--orange);
+  width: 75px;
+  height: 75px;
+  color: var(--orange);
+  border-radius: 10%;
+}
+.content-about h3 {
+  font-size: 18px;
+  font-weight: 700;
+}
+.content-about p {
+  text-align: left;
+  opacity: 60%;
+}
+/* mobile screen  */
+@media only screen and (max-width: 480px) {
   header {
     display: none;
   }
@@ -422,7 +507,8 @@ header {
     width: 50px;
     height: 50px;
   }
-  .hl-column h3, .hl-column p {
+  .hl-column h3,
+  .hl-column p {
     position: absolute;
     left: 70px;
   }
@@ -484,4 +570,209 @@ header {
   .slides img {
     padding: 0;
   }
+  .feature-bg:after {
+    display: none;
+  }
+  .responsive-about-content {
+    height: auto;
+  }
+  .featured-text h2 {
+    text-align: center;
+  }
+  .contact-sc-content {
+    padding-top: 80px;
+  }
+}
+
+/* tablet screen  */
+@media only screen and (min-width: 481px) and (max-width: 820px) {
+/* .logo {
+  position: absolute;
+  left: 15px;
+}
+.navmenu a {
+  padding: 0 10px;
+}
+.navmenu {
+  max-width: 100%;
+  margin-left: 70px;
+} */
+
+header {
+  display: none;
+}
+.new-header {
+  display: block;
+  position: fixed;
+}
+.navmenu {
+  display: block;
+}
+.menu-toggle {
+  display: flex;
+  font-size: 24px;
+  cursor: pointer;
+  color: #f1f1f1;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  padding: 10px;
+}
+.menu-toggle:hover {
+  color: var(--orange);
+}
+.logo img {
+  width: 120px;
+}
+.navmenu {
+  display: none;
+}
+.navmenu li {
+  display: inline;
+}
+.nav-icon {
+  display: none;
+}
+.main_bg {
+  height: auto;
+  padding-top: 8rem;
+  background-position: center;
+}
+.main_content {
+  padding-top: 8rem;
+}
+.main_content p {
+  color: #333;
+  font-size: 10px;
+}
+.main_content h3 {
+  font-size: 30px;
+}
+.main_content button:nth-of-type(1) {
+  padding: 10px 100px;
+}
+.main_content button:nth-of-type(2) {
+  margin-bottom: 70px;
+  padding: 10px 115px;
+}
+
+.hl-column {
+  display: flex;
+  width: 10px;
+  text-align: left;
+  position: relative;
+}
+.hl-column h3 {
+  font-size: 18px;
+}
+.hl-column p {
+  font-size: 14px;
+  top: 70px;
+}
+.hl-column svg {
+  width: 50px;
+  height: 50px;
+}
+.hl-column h3,
+.hl-column p {
+  position: absolute;
+  left: 70px;
+}
+
+.hotline-section {
+  padding: 20px 0;
+}
+.colum_product img {
+  width: 150px;
+}
+.product_card {
+  width: 90%;
+  margin-top: 30px;
+}
+.navmenu a {
+  padding: 0 10px;
+}
+.nav-icon a {
+  padding: 0 10px;
+}
+.hotline-section {
+  padding: 20px 0;
+}
+.colum_product img {
+  width: 150px;
+}
+.product_card {
+  margin-top: 30px;
+}
+.form-register,
+.form-register1 {
+  width: 90%;
+  margin-top: 50px;
+}
+.video-container {
+  height: 300px;
+}
+.comment-brand {
+  padding: 20px;
+}
+.mycomment {
+  width: 90%;
+}
+.prd-div a {
+  font-size: 12px;
+}
+.slider {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.breadcrumb-item {
+  font-size: 16px;
+}
+.pagelink-nav {
+  top: 10px;
+}
+.slides img {
+  padding: 0;
+}
+.feature-bg:after {
+  display: none;
+}
+.responsive-about-content {
+  height: auto;
+}
+.featured-text h2 {
+  text-align: center;
+}
+.contact-sc-content {
+  padding-top: 80px;
+}
+
+}
+
+#loading {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid var(--orange);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
