--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,21 @@ header {
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 0px 100px -3px rgba(0, 0, 0, 0.1);
+  animation: fadeInScale 1s ease-in-out;
+}
+.product_card.show {
+  opacity: 1;
+  transform: scale(1);
+}
+@keyframes fadeInScale {
+  0% {
+      opacity: 0;
+      transform: scale(0.9);
+  }
+  100% {
+      opacity: 1;
+      transform: scale(1);
+  }
 }
 .product_card:hover {
   box-shadow: 0px 0px 100px -3px rgba(255, 255, 255, 0);
@@ -586,7 +601,7 @@ header {
 
 /* tablet screen  */
 @media only screen and (min-width: 481px) and (max-width: 820px) {
-/* .logo {
+  /* .logo {
   position: absolute;
   left: 15px;
 }
@@ -598,156 +613,155 @@ header {
   margin-left: 70px;
 } */
 
-header {
-  display: none;
-}
-.new-header {
-  display: block;
-  position: fixed;
-}
-.navmenu {
-  display: block;
-}
-.menu-toggle {
-  display: flex;
-  font-size: 24px;
-  cursor: pointer;
-  color: #f1f1f1;
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  padding: 10px;
-}
-.menu-toggle:hover {
-  color: var(--orange);
-}
-.logo img {
-  width: 120px;
-}
-.navmenu {
-  display: none;
-}
-.navmenu li {
-  display: inline;
-}
-.nav-icon {
-  display: none;
-}
-.main_bg {
-  height: auto;
-  padding-top: 8rem;
-  background-position: center;
-}
-.main_content {
-  padding-top: 8rem;
-}
-.main_content p {
-  color: #333;
-  font-size: 10px;
-}
-.main_content h3 {
-  font-size: 30px;
-}
-.main_content button:nth-of-type(1) {
-  padding: 10px 100px;
-}
-.main_content button:nth-of-type(2) {
-  margin-bottom: 70px;
-  padding: 10px 115px;
-}
+  header {
+    display: none;
+  }
+  .new-header {
+    display: block;
+    position: fixed;
+  }
+  .navmenu {
+    display: block;
+  }
+  .menu-toggle {
+    display: flex;
+    font-size: 24px;
+    cursor: pointer;
+    color: #f1f1f1;
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    padding: 10px;
+  }
+  .menu-toggle:hover {
+    color: var(--orange);
+  }
+  .logo img {
+    width: 120px;
+  }
+  .navmenu {
+    display: none;
+  }
+  .navmenu li {
+    display: inline;
+  }
+  .nav-icon {
+    display: none;
+  }
+  .main_bg {
+    height: auto;
+    padding-top: 8rem;
+    background-position: center;
+  }
+  .main_content {
+    padding-top: 8rem;
+  }
+  .main_content p {
+    color: #333;
+    font-size: 10px;
+  }
+  .main_content h3 {
+    font-size: 30px;
+  }
+  .main_content button:nth-of-type(1) {
+    padding: 10px 100px;
+  }
+  .main_content button:nth-of-type(2) {
+    margin-bottom: 70px;
+    padding: 10px 115px;
+  }
 
-.hl-column {
-  display: flex;
-  width: 10px;
-  text-align: left;
-  position: relative;
-}
-.hl-column h3 {
-  font-size: 18px;
-}
-.hl-column p {
-  font-size: 14px;
-  top: 70px;
-}
-.hl-column svg {
-  width: 50px;
-  height: 50px;
-}
-.hl-column h3,
-.hl-column p {
-  position: absolute;
-  left: 70px;
-}
+  .hl-column {
+    display: flex;
+    width: 10px;
+    text-align: left;
+    position: relative;
+  }
+  .hl-column h3 {
+    font-size: 18px;
+  }
+  .hl-column p {
+    font-size: 14px;
+    top: 70px;
+  }
+  .hl-column svg {
+    width: 50px;
+    height: 50px;
+  }
+  .hl-column h3,
+  .hl-column p {
+    position: absolute;
+    left: 70px;
+  }
 
-.hotline-section {
-  padding: 20px 0;
-}
-.colum_product img {
-  width: 150px;
-}
-.product_card {
-  width: 90%;
-  margin-top: 30px;
-}
-.navmenu a {
-  padding: 0 10px;
-}
-.nav-icon a {
-  padding: 0 10px;
-}
-.hotline-section {
-  padding: 20px 0;
-}
-.colum_product img {
-  width: 150px;
-}
-.product_card {
-  margin-top: 30px;
-}
-.form-register,
-.form-register1 {
-  width: 90%;
-  margin-top: 50px;
-}
-.video-container {
-  height: 300px;
-}
-.comment-brand {
-  padding: 20px;
-}
-.mycomment {
-  width: 90%;
-}
-.prd-div a {
-  font-size: 12px;
-}
-.slider {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.breadcrumb-item {
-  font-size: 16px;
-}
-.pagelink-nav {
-  top: 10px;
-}
-.slides img {
-  padding: 0;
-}
-.feature-bg:after {
-  display: none;
-}
-.responsive-about-content {
-  height: auto;
-}
-.featured-text h2 {
-  text-align: center;
-}
-.contact-sc-content {
-  padding-top: 80px;
-}
-
+  .hotline-section {
+    padding: 20px 0;
+  }
+  .colum_product img {
+    width: 150px;
+  }
+  .product_card {
+    width: 90%;
+    margin-top: 30px;
+  }
+  .navmenu a {
+    padding: 0 10px;
+  }
+  .nav-icon a {
+    padding: 0 10px;
+  }
+  .hotline-section {
+    padding: 20px 0;
+  }
+  .colum_product img {
+    width: 150px;
+  }
+  .product_card {
+    margin-top: 30px;
+  }
+  .form-register,
+  .form-register1 {
+    width: 90%;
+    margin-top: 50px;
+  }
+  .video-container {
+    height: 300px;
+  }
+  .comment-brand {
+    padding: 20px;
+  }
+  .mycomment {
+    width: 90%;
+  }
+  .prd-div a {
+    font-size: 12px;
+  }
+  .slider {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .breadcrumb-item {
+    font-size: 16px;
+  }
+  .pagelink-nav {
+    top: 10px;
+  }
+  .slides img {
+    padding: 0;
+  }
+  .feature-bg:after {
+    display: none;
+  }
+  .responsive-about-content {
+    height: auto;
+  }
+  .featured-text h2 {
+    text-align: center;
+  }
+  .contact-sc-content {
+    padding-top: 80px;
+  }
 }
 
 #loading {
@@ -769,10 +783,14 @@ header {
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 1s linear infinite;
+  animation: spin 0.5s linear infinite;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
